--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
- 
+ <div class="block first"></div>
+ <div class="block"></div>
+ <div class="block"></div>
 </body>
 </html>
