✔️DONE: #3 - Вложенные стили

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
  <div class="block first"></div>
- <div class="block"></div>
+ <div class="block" id="central_block">
+  <ul>
+   <li>Элемент - 1</li>
+   <li>Элемент - 2</li>
+   <li>Элемент - 3</li>
+   <li>Элемент - 4</li>
+   <li>Элемент - 5</li>
+  </ul>
+ </div>
  <div class="block"></div>
 </body>
 </html>
