✔️DONE:#4 - Использование миксинов

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
  <div class="block first"></div>
  <div class="block" id="central_block">
   <ul>
-   <li>Элемент - 1</li>
+   <li>Элемент - 1 <a href="#">1</a></li>
    <li>Элемент - 2</li>
    <li>Элемент - 3</li>
    <li>Элемент - 4</li>
    <li>Элемент - 5</li>
+   <a href="#">href</a>
   </ul>
  </div>
  <div class="block"></div>
