↗🔜IN PROCESS: (Псевдоклассы: DONE | Импортирование данных: STARTING): [сделаем так чтобы у нас переменной находились в одном файле, mixin-и находились в другом файле, ну ф вес основной код находилася внутри .scss файле

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <li>Элемент - 3</li>
    <li>Элемент - 4</li>
    <li>Элемент - 5</li>
-   <a href="#">href</a>
+   <a href="#12">href</a>
   </ul>
  </div>
  <div class="block"></div>
